# grb_sensitivity

./: .gitignore  README.md  grb_sensitivity_codex_implementation_instructions.md  grb_sensitivity_design_spec.md  pyproject.toml  review_notes_stage1_cli.md  review_notes_stage2_equations.md  review_notes_stage3_outputs.md  review_notes_stage4_final.md  setup.py
examples/: detector_response_effective_area.csv  detector_response_efficiency.csv  example_curve.yaml  example_significance.yaml
examples/output/: example_curve.csv  example_significance.csv
grb_sensitivity/: __init__.py  background.py  cli.py  config_io.py  config_schema.py  detector.py  help_text.py  output.py  response.py  sensitivity.py  spectra.py  wizard.py
tests/: test_background_moretti2009.py  test_band_spectrum.py  test_cli_basic.py  test_cli_run_stage3.py  test_cli_wizard.py  test_config_validation.py  test_response.py  test_sensitivity.py
