[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grb-sensitivity"
version = "0.1.0"
description = "Educational GRB detector sensitivity command-line tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "pyyaml",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
grb-sens = "grb_sensitivity.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
